debugging BG darkening issue on iphones

--- a/style.css
+++ b/style.css
@@ -47,14 +47,20 @@ body{
     opacity: 20%;
 }
 
-.bg-overlay-vignette{
+.bg-overlay-vignette {
     position: absolute;
     height: 100vh;
     width: 100vw;
     z-index: -1;
     margin: 0;
     padding: 0;
-    box-shadow: inset 0 0 200px black;
+    box-shadow: inset 0 0 20rem rgba(0, 0, 0, 0.8);
+}
+
+@media only screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
+    .bg-overlay-vignette {
+        box-shadow: inset 0 0 10rem rgba(0, 0, 0, 0.5); /* Reduced shadow intensity for iPhones */
+    }
 }
 
 .container{
